--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/b/kal003.b.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/b/kal003.b.style.css
@@ -46,3 +46,9 @@
 .div_radiobox_right {
 	float: right;
 }
+.ntsControl.symbol:after {
+  position: absolute;
+  content: attr(data-content);
+  top: 0px;
+  color: #999;
+}
