Update KAL003 UI code

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
@@ -109,7 +109,7 @@
  								<ui:include src="common/checkconditions.xhtml" />
 							</div>
 							<div class="tab-content-4">
-								<span>Tab Content 4</span><br />
+								<ui:include src="daily/fixedcheckcondition/checkconditions.xhtml" />
 <!-- 								<ui:include src="../b/index.xhtml" /> -->
 							</div>
 						</div>
