fix bug #1 in excel file
file name: 不具合一覧_CPS001_個人情報の登録_20180111.xlsx

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/a/cps001.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/a/cps001.a.style.css
@@ -183,6 +183,20 @@
 	overflow: hidden;
 }
 
+.person-info td>div.info>* {
+	display: inline-block;
+	max-width: 215px;
+	text-overflow: ellipsis;
+	height: 30px;
+	overflow: hidden;
+	white-space: nowrap;
+}
+
+.person-info td>div.info>*:first-child {
+	min-width: 95px;
+	max-width: 95px;
+}
+
 .person-info td>div.info.first {
 	min-width: 95px;
 	max-width: 95px;
