--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
@@ -13,6 +13,7 @@
             </com:ValidatorScript>
             <com:EnumScript>
 				nts.uk.ctx.at.function.dom.alarm.extractionrange.daily.SpecifiedMonth
+				nts.uk.ctx.at.function.dom.alarm.AlarmCategory
 			</com:EnumScript>
             <com:scriptfile set="IGNITE" />
             <com:scriptfile path="../share/model.js" />
