fix search ksu001 o.o1.jb

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/o/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/o/index.xhtml
@@ -28,7 +28,7 @@
 			tabindex="32" id="time-edit2"
 			data-bind="ntsTimeEditor: {value: time2, inputFormat: 'time'}" />
 		<button tabindex="33" data-bind="click:search" class="reserved">#{i18n.getText('KSU001_67')}</button>
-		<button tabindex="34" data-bind="click:clear, enable:isEnableClearSearchButton">#{i18n.getText('KSU001_68')}</button>
+		<button tabindex="34" data-bind="click:clear">#{i18n.getText('KSU001_68')}</button>
 		<div tabindex="35" id="combo-box2"
 			data-bind="ntsComboBox: {
 										options: listWorkTimeComboBox,
