--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/o1/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/o1/index.xhtml
@@ -52,7 +52,7 @@
 					<span>#{i18n.getText('KSU001_66')}</span> <input id="time-edit2"
 						data-bind="ntsTimeEditor: {value: time2, inputFormat: 'time'}" />
 					<button data-bind="click:search" class="reserved">#{i18n.getText('KSU001_67')}</button>
-					<button data-bind="click:clear, enable:isEnableClearSearchButton">#{i18n.getText('KSU001_68')}</button>
+					<button data-bind="click:clear">#{i18n.getText('KSU001_68')}</button>
 
 					<div id="switch-o" class="cf1"
 						data-bind="ntsSwitchButton: {
