--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/d/index.xhtml
@@ -13,8 +13,10 @@
 					height : 900
 				};
 			</script>
-			<com:scriptfile path="/lib/generic/cropper/cropper.js" of="/nts.uk.com.js.web" />
-			<com:stylefile path="/lib/generic/cropper/cropper.css" of="/nts.uk.com.js.web" />
+			<com:scriptfile path="/lib/generic/cropper/cropper.js"
+				of="/nts.uk.com.js.web" />
+			<com:stylefile path="/lib/generic/cropper/cropper.css"
+				of="/nts.uk.com.js.web" />
 			<com:scriptfile set="IGNITE" />
 			<com:stylefile path="cps001.d.style.css" />
 			<com:scriptfile path="cps001.d.service.js" />
@@ -25,10 +27,17 @@
 		<ui:define name="content">
 			<div id="contents-area">
 				<div style="padding-left: 10px">#{i18n.getText('CPS001_70')}</div>
-				<div id="test" data-bind="ntsImageEditor: {editable: true, width:600, height: 600, freeResize: false, resizeRatio: 0.75}"></div>
+				<div id="test"
+					data-bind="ntsImageEditor: { editable: true, 
+															width:600, 
+															height: 600, 
+															freeResize: false, 
+															resizeRatio: 0.75,
+															accept: ['.png','.PNG','.jpg','.JPG', '.jpeg', '.JPEG','.bmp','.BMP', '.gif', '.GIF'] }"></div>
 			</div>
 			<div id="functions-area-bottom">
-				<button class="proceed x-large" data-bind="click: upload,  enable: enaBtnSave">#{i18n.getText('CPS001_72')}</button>
+				<button class="proceed x-large"
+					data-bind="click: upload,  enable: enaBtnSave">#{i18n.getText('CPS001_72')}</button>
 				<button class="" data-bind="click: close">#{i18n.getText('CPS001_73')}</button>
 			</div>
 		</ui:define>
