fix bug jira kmk009: Hiển thị sai line color của A3_27
https://jira.newwave.vn/browse/NUK-1040

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/009/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/009/a/index.xhtml
@@ -231,7 +231,7 @@
 						<tr class="row">
 							<td>
 								<!-- A3_27 -->
-								<div data-bind="ntsFormLabel: {required: true }">#{i18n.getText('KMK009_23')}</div>
+								<div id="targetItemLb" data-bind="ntsFormLabel: {required: false }">#{i18n.getText('KMK009_23')}</div>
 							</td>
 							<td>
 								<!-- A3_28 Open dialog KDL002-->
