--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a2/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a2/index.xhtml
@@ -26,7 +26,7 @@
 		<com:ko tag="if" bind="isSimpleMode() &amp;&amp; !isFlowMode()">
 			<div tabindex="-1" class="accordion setting_detail_tab2">
 				<div id="fixtable-tab2-one-day-simple-mode" class="table-width" data-bind="ntsFixTableCustom: {
-						isEnableAllControl: isDetailMode,
+						isEnableAllControl: isEnableTimeRangeOneDaySimpleMode,
 						option: fixTableOptionOneDaySimpleMode}"></div>
 			</div>
 		</com:ko>
