--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/overview-functionwrap.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/overview-functionwrap.xhtml
@@ -13,6 +13,7 @@
 				<com:scriptfile path="catalog.js" />
 			</ui:define>
 			<ui:define name="content">				
+				<div id="functions-area"></div>
 				<div id="contents-area" class="cf">
 					<div id="side-menu" class="cf"></div>
 					<div id="content" class="cf">
