Add in functionwrap and customtag

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/functionwrap/subwindow/dialogb.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/functionwrap/subwindow/dialogb.xhtml
@@ -11,6 +11,7 @@
 		<com:scriptfile path="dialog.start.js"/>
 		</ui:define>
 		<ui:define name="content">
+			<div id="functions-area"></div>
 			<div id="content-area" class="body">
 				<div id="functions-area-bottom">
 					<button id="btn_001" class="x-large proceed " data-bind="click: positionHis">決定</button>
