--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/functionwrap/subwindow/dialog.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/functionwrap/subwindow/dialog.xhtml
@@ -11,6 +11,7 @@
 		<com:scriptfile path="dialog.start.js"/>
 		</ui:define>
 		<ui:define name="content">
+			<div id="functions-area"></div>
 			<div id="content-area" class="body">
 				<div id="functions-area">
 					<button id="register" class="proceed">登録</button>
