Add in iggridlab, rule, utilities

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog.xhtml
@@ -15,6 +15,7 @@
 				
 			</ui:define>
 			<ui:define name="content">				
+				<div id="functions-area"></div>
 				<div id="contents-area" class="cf">
 					<div id="side-menu" class="cf"></div>
 					<div id="content" class="cf">
