--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/iggridlab/ntsoniggrid/sample.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/iggridlab/ntsoniggrid/sample.xhtml
@@ -19,6 +19,7 @@
 			</ui:define>
 			
 			<ui:define name="content">
+				<div id="functions-area"></div>
 				<div id="contents-area">
 					<div id="side-menu" class="cf"></div>
 					<div id="content" class="cf">
