Revert combobox comment

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/combobox/combobox.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/combobox/combobox.xhtml
@@ -60,17 +60,17 @@
 						
 						<h2>Expand width when dropped down</h2>
 						<div class="control-group valign-center">
-<!-- 							<div id="combo-box2" data-bind="ntsComboBox: {options: itemList, -->
-<!-- 												optionsValue: 'code', -->
-<!-- 												visibleItemsCount: 5, -->
-<!-- 												value: selectedCode, -->
-<!-- 												optionsText: 'name', -->
-<!-- 												editable: isEditable, -->
-<!-- 												enable: isEnable, -->
-<!-- 												columns: [ -->
-<!-- 														{ prop: 'code', length: 4 }, -->
-<!-- 														{ prop: 'name', length: 10, lengthDropDown: 20 }, -->
-<!-- 													]}"></div> -->
+							<div id="combo-box2" data-bind="ntsComboBox: {options: itemList,
+ 												optionsValue: 'code',
+ 												visibleItemsCount: 5,
+ 												value: selectedCode,
+ 												optionsText: 'name',
+ 												editable: isEditable,
+ 												enable: isEnable,
+ 												columns: [
+ 														{ prop: 'code', length: 4 },
+ 														{ prop: 'name', length: 10, lengthDropDown: 20 },
+ 													]}"></div>
 						</div>
 						
 						<article class="cf">
