--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/016/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/016/a/index.xhtml
@@ -36,11 +36,11 @@
 				<button id="A_BTN_DELETE" class="danger"
 					data-bind="click : removeDataSelectioItem, enable: checkCreate()==false &amp;&amp; $root.errors.isEmpty" tabindex="4" >#{i18n.getText('CPS016_3')}</button>
 				
-					<button tabindex="5" id="A_BTN_CPS016_4"
-						data-bind="click: closeDialog, visible: isDialog ">#{i18n.getText('CPS016_4')}</button> 
-
  				<button class="goout" id="A_BTN_JUMP"
 					data-bind="click:OpenCPS017, enable: checkCreate()==false" tabindex="6" >#{i18n.getText('CPS016_23')}</button>
+			 
+			 	<button tabindex="5" id="A_BTN_CPS016_4"
+						data-bind="click: closeDialog, visible: isDialog ">#{i18n.getText('CPS016_4')}</button> 
 			 
 			</div>
 
@@ -51,8 +51,9 @@
 					<div class="cf">
 						<div style="float: left">
 							<div style="width: 395px"
+							
 								data-bind="ntsSearchBox: {       
-   									searchMode: 'highlight',       
+   									searchMode: 'filter',       
    									targetKey: 'selectionItemId',        
    									comId: 'single-list',       
    									items: listItems,        
