update css KAL004

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
@@ -39,7 +39,7 @@
 			</div>
 			<div id="contents-area" >
 				<div class="container">
-					<div id="left-content" >
+					<div id="left-content" class ="bg-green caret-right caret-background">
 						<table id="single-list" data-bind="ntsGridList: {								
 								height: 350,
 								dataSource: alarmSource,
