hot fix UI sample KCP

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/002/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/002/index.xhtml
@@ -23,7 +23,7 @@
 		<ui:define name="content">
 			<div id="contents-area">
 				<div id="side-menu" class="cf"></div>
-				<div id="detail-content">
+				<div id="content">
 					<div class="cf">
 						<note class="pull-left" style="width:500px;"> <b>Update
 							2017/07/10</b> <br />
@@ -31,7 +31,7 @@
 						</note>
 					</div>
 					<!-- BEGIN ORVERVIEW -->
-					<div id="function-area" style="margin: 40px">
+					<div id="function-area">
 						<h1>KCP002-分類リスト</h1>
 						<h2>Overview</h2>
 						<div style="margin-left: 30px; padding-top: 10px">
