--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/004/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/004/index.xhtml
@@ -33,7 +33,7 @@
 		<ui:define name="content">
 			<div id="contents-area">
 				<div id="side-menu" class="cf"></div>
-				<div style="margin-left: 30px" id="content" class="cf">
+				<div id="content" class="cf">
 					<!-- BEGIN ORVERVIEW -->
 					<div>
 						<h1>KCP004 職場リスト（共通部品）Workplace List</h1>
