--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/b/kal004.b.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/b/kal004.b.style.css
@@ -2,6 +2,7 @@
 #contents-area .start{width: 320px; float: left; padding: 30px 0 0 40px;}
 #contents-area .end{width: 320px; float: left; padding: 30px 0 0 30px;}
 #contents-area .day{margin: 30px 0 45px 25px;}
+#contents-area .day .ntsRadioBox span:nth-child(6){padding-left: 0px;}
 #contents-area .day .input-box{height: 20px; width: 50px; text-align: center; margin-left: 10px;}
 
 #contents-area .month{margin: 50px 0 45px 25px;}
@@ -9,6 +10,7 @@
 #contents-area .month .ui-corner-all{border-radius: 0;}
 #contents-area .month .combo-box{width: 100px;}
 #contents-area .month .label{position: relative; top: -9px;}
+#contents-area .month .ntsRadioBox span.box{top:-10px;}
 
 #contents-area .centerSys{float: left; width: 0; position: relative; top: 130px; left: -30px;}
 
