--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/b/cps006.b.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/b/cps006.b.style.css
@@ -27,6 +27,17 @@
 
 #content-left {
 	padding: 15px;
+	width: 350px !important;
+	height: 485px !important;
+}
+#checked{
+	padding-left: 0px !important;
+	margin-bottom : 5px !important;
+}
+.div_grid{
+	float: left;
+	clear: both;
+	width: 100%;
 }
 
 #content-right {
