--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/002/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/002/cm/index.xhtml
@@ -98,14 +98,13 @@
 					</div>
 					<div class="table cm-table" data-bind="if: detailReasonDisp() != 0">
 						<div class="cell cm-column1">
-							<div data-bind="ntsFormLabel: { constraint: 'AppReason' }">#{i18n.getText('KAF002_11')}</div>	
+							<div data-bind="ntsFormLabel: {}">#{i18n.getText('KAF002_11')}</div>	
 						</div>
 						<div class="cell cm-column2">
 							<span>
-								<textarea class="cm-memo" data-bind="ntsMultilineEditor: { 
+								<textarea id = "appReason" class="cm-memo" data-bind="ntsMultilineEditor: { 
 									name: '#[KAF002_11]',
-									value: application().contentReason,
-									constraint: 'AppReason' }" />
+									value: application().contentReason }" />
 							</span>
 						</div>
 					</div>
