--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/007/share/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/007/share/index.xhtml
@@ -279,7 +279,7 @@
 		<div class="valign-center control-group-kaf007" data-bind="if: $parent.displayAppReasonContentFlg">
 			<!--A12 申請理由（ラベル）-->
 			<div class="lblTitle-kaf007"
-				data-bind="ntsFormLabel: { constraint: 'AppReason'}">#{i18n.getText('KAF007_27')}</div>
+				data-bind="ntsFormLabel: {}">#{i18n.getText('KAF007_27')}</div>
 			<!--A12_1 申請理由-->
 			<div id="multiline-kaf007">
 				<textarea id="inpReasonTextarea"
@@ -288,8 +288,7 @@
 															resizeable: false,
 									                    	width: '450',
 									                    	textalign: 'left'
-									                   	}, 
-			                   						constraint: 'AppReason', 
+									                   	},
 			                   						required : $parent.requiredReason(), 
 			                   						name: '#[KAF007_29]',
 			                   						enable: $parent.editable}" />
