fixbug save and validate textbox CMM021

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/index.xhtml
@@ -86,12 +86,12 @@
 					<div id="tabpanel-1" role="tabpanel" class="table-grid-list">
 						<table id="single-list"
 							data-bind="ntsGridList: {								
-								dataSource: items,
-								height: 580,
+								dataSource: items,								
 								primaryKey: 'employeeId',
-								columns: columns,
+								columns: columns,																
 								multiple: false,
-								value: selectedEmployeeId
+								value: selectedEmployeeId,
+								rows: 20
 							}"></table>
 					</div>
 				</div>
