--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
@@ -33,9 +33,9 @@
 			<div id="functions-area">
 				<div class="container">
 					<a class="goback link-button" data-bind="ntsLinkButton: { jump: '../../002/a/index.xhtml' }">#{i18n.getText('KAL004_3')}</a>
-					<button id="new"  tabindex="1" data-bind="click: insertAlarm">#{i18n.getText('KAL004_4')}</button>
-					<button id="registration"  class="proceed" tabindex="2" data-bind="click: updateAlarm">#{i18n.getText('KAL004_5')}</button>
-					<button id="delete" class="danger" data-bind="enable: currentCode !=''" tabindex="3">#{i18n.getText('KAL004_6')}</button>
+					<button id="new"  tabindex="1" data-bind="click: createAlarm">#{i18n.getText('KAL004_4')}</button>
+					<button id="registration"  class="proceed" tabindex="2" data-bind="click: saveAlarm">#{i18n.getText('KAL004_5')}</button>
+					<button id="delete" class="danger" data-bind="click: removeAlarm, enable: currentCode !=''" tabindex="3">#{i18n.getText('KAL004_6')}</button>
 				</div>
 			</div>
 			<div id="contents-area" >
