update entity Kal004

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
@@ -63,7 +63,7 @@
 			                                 constraint: 'AlarmPatternCode',
 			                                 value: alarmCode,
 			                                 required: true,
-			                                 enable: $root.createMode,
+			                                 enable: createMode,
 			                                 immediate: true }, hasFocus: createMode()"/>
 										<input tabindex="8" id="alarmName"
 			                                 data-bind="ntsTextEditor: {
