--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/a/index.xhtml
@@ -28,6 +28,8 @@
 					nts.uk.ctx.bs.employee.dom.employeeinfo.EmployeeMail
 					nts.uk.ctx.bs.employee.dom.employeeinfo.CompanyMobile
 					nts.uk.ctx.bs.employee.dom.employeeinfo.HiringType
+					nts.uk.ctx.bs.employee.dom.employeeinfo.EmployeeCode
+					nts.uk.ctx.bs.employee.dom.employee.mgndata.ExternalCode
 
 					<!-- 	
 					nts.uk.ctx.bs.person.dom.person.currentdddress.PersonAddress1
