--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/a/index.xhtml
@@ -77,6 +77,7 @@
 								value: categoryName ,
 								constraint:'CategoryName',
 								enable: true,
+								required: true,
 								immediate: false}"></input>
 							<com:ko-if bind="displayIsAbolished === 0">
 								<div data-bind="ntsCheckBox: { checked: isAbolition }">#{i18n.getText('CPS006_11')}</div>
